--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <link rel="stylesheet" href="./lightbox.css" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -28,5 +29,7 @@
   </head>
   <body>
     <div id="root"></div>
+
+    <script src="./lightbox-plus-jquery.min.js"></script>
   </body>
 </html>
